--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require" : {
     "php" : ">=5.4.0",
     "yiisoft/yii2" : "*",
-    "2amigos/yii2-ckeditor-widget" : "~1.0"
+    "2amigos/yii2-ckeditor-widget" : "~1.0",
+    "digitalmonk/yii2-widget-toggle" : "~0.0.1"
   },
   "autoload" : {
     "psr-4" : {
