--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php" : ">=5.4.0",
     "yiisoft/yii2" : "*",
     "2amigos/yii2-ckeditor-widget" : "~1.0",
-    "digitalmonk/yii2-widget-toggle" : "~0.0.1"
+    "digitalmonk/yii2-widget-toggle" : "~0.0.1",
+    "yiisoft/yii2-imagine" : "~2.0.0"
   },
   "autoload" : {
     "psr-4" : {
